--- a/experiments/2024.11.14_dialogue2graph/check_data.ipynb
+++ b/experiments/2024.11.14_dialogue2graph/check_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -29,7 +29,7 @@
        "True"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,6 +215,140 @@
    ],
    "source": [
     "%pwd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Graph(graph_dict={'nodes': [{'id': 1, 'label': 'welcome and ask', 'is_start': True, 'utterances': ['Hello! This is tech support. How can I help you today?']}, {'id': 2, 'label': 'reload', 'is_start': False, 'utterances': ['Try to reload your device.']}, {'id': 3, 'label': 'check if helped', 'is_start': False, 'utterances': ['Has this resolved the issue for you?']}, {'id': 4, 'label': 'verification', 'is_start': False, 'utterances': ['Try cleaning browser cache.']}, {'id': 5, 'label': 'ask about additional problem', 'is_start': False, 'utterances': ['What is the other problem that you are experiencing?']}, {'id': 6, 'label': 'solution for balance', 'is_start': False, 'utterances': ['Try logging out of the website and then re-logging in.']}, {'id': 7, 'label': 'end', 'is_start': False, 'utterances': ['Thank you for contacting us, have a nice day.']}], 'edges': [{'source': 1, 'target': 2, 'utterances': ['The website loading takes too long']}, {'source': 2, 'target': 3, 'utterances': ['Sure, I will try that']}, {'source': 3, 'target': 4, 'utterances': ['No, it did not work ']}, {'source': 4, 'target': 3, 'utterances': ['All right, I will try cleaning cache']}, {'source': 3, 'target': 7, 'utterances': ['Yes, that fixed everything']}, {'source': 3, 'target': 5, 'utterances': [\"Actually, I'm having a different issue now\"]}, {'source': 5, 'target': 6, 'utterances': [\"I've put some money on my account but the balance is not updated on the website\"]}, {'source': 6, 'target': 3, 'utterances': ['Ok, I will try to log out']}, {'source': 6, 'target': 2, 'utterances': ['The balance is updated but now the website is slow again']}]}, graph=<networkx.classes.digraph.DiGraph object at 0x1174412e0>, node_mapping={})"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gr = Graph(data[0]['graph'])\n",
+    "gr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'id': 1,\n",
+       "  'label': 'welcome and ask',\n",
+       "  'is_start': True,\n",
+       "  'utterances': ['Hello! This is tech support. How can I help you today?']},\n",
+       " {'id': 2,\n",
+       "  'label': 'reload',\n",
+       "  'is_start': False,\n",
+       "  'utterances': ['Try to reload your device.']},\n",
+       " {'id': 3,\n",
+       "  'label': 'check if helped',\n",
+       "  'is_start': False,\n",
+       "  'utterances': ['Has this resolved the issue for you?']},\n",
+       " {'id': 4,\n",
+       "  'label': 'verification',\n",
+       "  'is_start': False,\n",
+       "  'utterances': ['Try cleaning browser cache.']},\n",
+       " {'id': 5,\n",
+       "  'label': 'ask about additional problem',\n",
+       "  'is_start': False,\n",
+       "  'utterances': ['What is the other problem that you are experiencing?']},\n",
+       " {'id': 6,\n",
+       "  'label': 'solution for balance',\n",
+       "  'is_start': False,\n",
+       "  'utterances': ['Try logging out of the website and then re-logging in.']},\n",
+       " {'id': 7,\n",
+       "  'label': 'end',\n",
+       "  'is_start': False,\n",
+       "  'utterances': ['Thank you for contacting us, have a nice day.']}]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gr.graph_dict['nodes']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'nodes': [{'id': 1,\n",
+       "   'label': 'welcome and ask',\n",
+       "   'is_start': True,\n",
+       "   'utterances': ['Hello! This is tech support. How can I help you today?']},\n",
+       "  {'id': 2,\n",
+       "   'label': 'reload',\n",
+       "   'is_start': False,\n",
+       "   'utterances': ['Try to reload your device.']},\n",
+       "  {'id': 3,\n",
+       "   'label': 'check if helped',\n",
+       "   'is_start': False,\n",
+       "   'utterances': ['Has this resolved the issue for you?']},\n",
+       "  {'id': 4,\n",
+       "   'label': 'verification',\n",
+       "   'is_start': False,\n",
+       "   'utterances': ['Try cleaning browser cache.']},\n",
+       "  {'id': 5,\n",
+       "   'label': 'ask about additional problem',\n",
+       "   'is_start': False,\n",
+       "   'utterances': ['What is the other problem that you are experiencing?']},\n",
+       "  {'id': 6,\n",
+       "   'label': 'solution for balance',\n",
+       "   'is_start': False,\n",
+       "   'utterances': ['Try logging out of the website and then re-logging in.']},\n",
+       "  {'id': 7,\n",
+       "   'label': 'end',\n",
+       "   'is_start': False,\n",
+       "   'utterances': ['Thank you for contacting us, have a nice day.']}],\n",
+       " 'edges': [{'source': 1,\n",
+       "   'target': 2,\n",
+       "   'utterances': ['The website loading takes too long']},\n",
+       "  {'source': 2, 'target': 3, 'utterances': ['Sure, I will try that']},\n",
+       "  {'source': 3, 'target': 4, 'utterances': ['No, it did not work ']},\n",
+       "  {'source': 4,\n",
+       "   'target': 3,\n",
+       "   'utterances': ['All right, I will try cleaning cache']},\n",
+       "  {'source': 3, 'target': 7, 'utterances': ['Yes, that fixed everything']},\n",
+       "  {'source': 3,\n",
+       "   'target': 5,\n",
+       "   'utterances': [\"Actually, I'm having a different issue now\"]},\n",
+       "  {'source': 5,\n",
+       "   'target': 6,\n",
+       "   'utterances': [\"I've put some money on my account but the balance is not updated on the website\"]},\n",
+       "  {'source': 6, 'target': 3, 'utterances': ['Ok, I will try to log out']},\n",
+       "  {'source': 6,\n",
+       "   'target': 2,\n",
+       "   'utterances': ['The balance is updated but now the website is slow again']}]}"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gr.graph_dict"
    ]
   },
   {
@@ -452,9 +586,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'read_json' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m test_data \u001b[38;5;241m=\u001b[39m \u001b[43mread_json\u001b[49m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m../../dev_packages/chatsky_llm_autoconfig/chatsky_llm_autoconfig/autometrics/test_data/complex_graphs.json\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'read_json' is not defined"
+     ]
+    }
+   ],
    "source": [
     "test_data = read_json(\"../../dev_packages/chatsky_llm_autoconfig/chatsky_llm_autoconfig/autometrics/test_data/complex_graphs.json\")"
    ]
@@ -508,6 +654,27 @@
    ],
    "source": [
     "case['dialogues']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'test_data' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mtest_data\u001b[49m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'test_data' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "test_data"
    ]
   },
   {
