--- a/experiments/2025.01.15_dialogue_validation/check_data.ipynb
+++ b/experiments/2025.01.15_dialogue_validation/check_data.ipynb
@@ -136,6 +136,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = ChatOpenAI(model=\"gpt-4o-mini\", api_key=env_settings.OPENAI_API_KEY, base_url=env_settings.OPENAI_BASE_URL)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
    "outputs": [],
