Removed unnecessary files

--- a/examples/examples.ipynb
+++ b/examples/examples.ipynb
@@ -148,6 +148,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO: add UUID seed for each run and default seed\n",
+    "# this UUID adds to every prompt"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
    "outputs": [
