--- a/examples/data_generation/generate_data.ipynb
+++ b/examples/data_generation/generate_data.ipynb
@@ -27,7 +27,7 @@
     "import json\n",
     "from dotenv import load_dotenv\n",
     "from langchain_openai import ChatOpenAI\n",
-    "from dialogue2graph.datasets.complex_dialogues.generation import LoopedGraphGenerato\n",
+    "from dialogue2graph.datasets.complex_dialogues.generation import LoopedGraphGenerator\n",
     "from dialogue2graph import Dialogue, Graph\n",
     "\n",
     "load_dotenv()"
