Quickfix for filenaming

--- a/examples/evaluation/evaluate_algorithm.ipynb
+++ b/examples/evaluation/evaluate_algorithm.ipynb
@@ -58,11 +58,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('generated_90.json', encoding='utf-8') as f:\n",
+    "with open('examples/example_data.json', encoding='utf-8') as f:\n",
     "    data = json.load(f)\n",
     "\n",
     "graph = Graph(graph_dict=data[0]['graph'])\n",
