--- a/examples/data_generation/generate_data.ipynb
+++ b/examples/data_generation/generate_data.ipynb
@@ -2,26 +2,49 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[34mInstalling dependencies from lock file\u001b[39m\n",
+      "\n",
+      "No dependencies to install or update\n",
+      "\n",
+      "\u001b[39;1mInstalling\u001b[39;22m the current project: \u001b[36mdialogue2graph\u001b[39m (\u001b[39;1m0.1.0\u001b[39;22m)\u001b[1G\u001b[2K\u001b[39;1mInstalling\u001b[39;22m the current project: \u001b[36mdialogue2graph\u001b[39m (\u001b[32m0.1.0\u001b[39m)\n"
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
     "!poetry install"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/askatasuna/.cache/pypoetry/virtualenvs/dialogue2graph-VcuUrJCU-py3.11/lib/python3.11/site-packages/pydantic/_internal/_fields.py:192: UserWarning: Field name \"validate\" in \"Dialogue\" shadows an attribute in parent \"BaseModel\"\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
-   },
-   "outputs": [],
+   ],
    "source": [
     "import os\n",
     "import json\n",
@@ -35,26 +58,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "gen_model = ChatOpenAI(model='gpt-4o')\n",
+    "gen_model = ChatOpenAI(model='o1-mini')\n",
     "val_model = ChatOpenAI(model='gpt-4o-mini')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
     "gen = LoopedGraphGenerator(\n",
@@ -65,21 +80,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:httpx:HTTP Request: POST http://193.187.173.33:8002/api/providers/openai/v1/completions/chat/completions \"HTTP/1.1 404 Not Found\"\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "==================================================\n",
+      "Generating graph for topic: antivirus software problems\n",
+      "==================================================\n",
+      "Generating Graph ...\n",
+      "❌ Failed to generate graph for antivirus software problems\n",
+      "Error type: ErrorType.GENERATION_FAILED\n",
+      "Error message: Unexpected error during generation: Error code: 404 - {'error': {'code': '404', 'message': '[BricksLLM] route not supported', 'type': ''}}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
-   },
-   "outputs": [],
+   ],
    "source": [
-    "gen.invoke(topic='antivirus software problems', use_cache=False)"
+    "gen.invoke(topic='antivirus software problems')"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "dialogue2graph-VcuUrJCU-py3.11",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
