New example and other improvements

--- a/examples/evaluation/evaluate_algorithm.ipynb
+++ b/examples/evaluation/evaluate_algorithm.ipynb
@@ -2,49 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[34mInstalling dependencies from lock file\u001b[39m\n",
-      "\n",
-      "No dependencies to install or update\n",
-      "\n",
-      "\u001b[39;1mInstalling\u001b[39;22m the current project: \u001b[36mdialogue2graph\u001b[39m (\u001b[39;1m0.1.0\u001b[39;22m)\u001b[1G\u001b[2K\u001b[39;1mInstalling\u001b[39;22m the current project: \u001b[36mdialogue2graph\u001b[39m (\u001b[32m0.1.0\u001b[39m)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!poetry install"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Evaluation"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/askatasuna/.cache/pypoetry/virtualenvs/dialogue2graph-VcuUrJCU-py3.11/lib/python3.11/site-packages/pydantic/_internal/_fields.py:192: UserWarning: Field name \"validate\" in \"Dialogue\" shadows an attribute in parent \"BaseModel\"\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import json\n",
@@ -62,7 +38,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('examples/example_data.json', encoding='utf-8') as f:\n",
+    "with open('../example_data.json', encoding='utf-8') as f:\n",
     "    data = json.load(f)\n",
     "\n",
     "graph = Graph(graph_dict=data[0]['graph'])\n",
@@ -71,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,17 +56,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 repeats works!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "x = await sampler.evaluate(\n",
     "    graph=graph,\n",
@@ -102,18 +70,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   all_utterances_present\n",
-      "0                    True\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(x)"
    ]
