--- a/examples/data_generation/generate_data.ipynb
+++ b/examples/data_generation/generate_data.ipynb
@@ -3,24 +3,25 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "!poetry install"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Data generation\n",
+    "\n",
+    "In this example we use `LoopedGraphGenerator` to create a pair Graph-Dialogues as a synthetic data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
@@ -36,25 +37,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "gen_model = ChatOpenAI(model='gpt-4o')\n",
-    "val_model = ChatOpenAI(model='gpt-4o-mini')"
+    "gen_model = ChatOpenAI(model='openai/gpt-4o')\n",
+    "val_model = ChatOpenAI(model='openai/gpt-4o-mini')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "gen = LoopedGraphGenerator(\n",
@@ -66,20 +59,30 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "gen.invoke(topic='antivirus software problems', use_cache=False)"
+    "gen.invoke(topic='antivirus software problems')"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "dialogue2graph-6s0jm3w1-py3.10",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
