--- a/experiments/exp2025_03_04_load_real_datasets/exp2025_03_04_load_real_datasets/load_datasets.ipynb
+++ b/experiments/exp2025_03_04_load_real_datasets/exp2025_03_04_load_real_datasets/load_datasets.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,11 +12,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from settings import EnvSettings\n",
+    "from dialogue2graph.utils.settings import EnvSettings\n",
     "env_settings = EnvSettings()"
    ]
   },
@@ -2328,7 +2328,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py11",
+   "display_name": "py311",
    "language": "python",
    "name": "python3"
   },
