--- a/experiments/exp2025_03_04_load_real_datasets/exp2025_03_04_load_real_datasets/load_datasets.ipynb
+++ b/experiments/exp2025_03_04_load_real_datasets/exp2025_03_04_load_real_datasets/load_datasets.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,11 +12,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from dialogue2graph.utils.settings import EnvSettings\n",
+    "from pydantic_settings import BaseSettings, SettingsConfigDict\n",
+    "from typing import Optional\n",
+    "\n",
+    "\n",
+    "class EnvSettings(BaseSettings, case_sensitive=True):\n",
+    "\n",
+    "    model_config = SettingsConfigDict(env_file=\"./.env\", env_file_encoding=\"utf-8\")\n",
+    "    HUGGINGFACE_TOKEN: Optional[str]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "env_settings = EnvSettings()"
    ]
   },
@@ -166,18 +181,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a3a6da75b8ef4ce08acfe6260c45b74c",
+       "model_id": "9e8c14b01980407f95b6523d10fdb0bf",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "README.md:   0%|          | 0.00/5.15k [00:00<?, ?B/s]"
+       "README.md:   0%|          | 0.00/6.34k [00:00<?, ?B/s]"
       ]
      },
      "metadata": {},
@@ -186,49 +201,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7c10f167adcc4a2ab245da45cb10d796",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "train-00000-of-00001.parquet:   0%|          | 0.00/4.35M [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e52258d1366c43aaafa1fe38d212baae",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "validation-00000-of-00001.parquet:   0%|          | 0.00/580k [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d488152094e14c23a4f122b8d3fef1c1",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "test-00000-of-00001.parquet:   0%|          | 0.00/576k [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fea865e45b984c82a89226b27989b366",
+       "model_id": "feb58595ff5b4fdeac8a190bc336d044",
        "version_major": 2,
        "version_minor": 0
       },
@@ -242,7 +215,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "95382a9880d54a38a94effe94aa2c1bf",
+       "model_id": "33c6ff79a4da455dac1b3f22850af934",
        "version_major": 2,
        "version_minor": 0
       },
@@ -256,7 +229,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7b1a3fb7ce9846168f445b160ff8530d",
+       "model_id": "c6e891c39df944f7a753f12bb67f3c2a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -286,7 +259,7 @@
        "})"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
