dialogue id added to from_list

--- a/experiments/exp2025_03_11_all_uttrs_present/exp2025_03_11_all_uttrs_present/tests.ipynb
+++ b/experiments/exp2025_03_11_all_uttrs_present/exp2025_03_11_all_uttrs_present/tests.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/peshkichev/miniconda3/envs/py311/lib/python3.11/site-packages/pydantic/_internal/_fields.py:192: UserWarning: Field name \"validate\" in \"Dialogue\" shadows an attribute in parent \"BaseModel\"\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "from dialogue2graph.metrics.no_llm_metrics import all_utterances_present, dialogues_are_valid_paths\n",
     "from dialogue2graph.metrics.llm_metrics import compare_graphs\n",
@@ -14,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,27 +61,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using the latest cached version of the dataset since DeepPavlov/d2g_generated couldn't be found on the Hugging Face Hub\n",
-      "WARNING:datasets.load:Using the latest cached version of the dataset since DeepPavlov/d2g_generated couldn't be found on the Hugging Face Hub\n",
-      "Found the latest cached dataset configuration 'default' at /home/peshkichev/.cache/huggingface/datasets/DeepPavlov___d2g_generated/default/0.0.0/dd93f051f8e7a942b60ed61eed029300b47696a2 (last modified on Sun Mar  9 10:45:24 2025).\n",
-      "WARNING:datasets.packaged_modules.cache.cache:Found the latest cached dataset configuration 'default' at /home/peshkichev/.cache/huggingface/datasets/DeepPavlov___d2g_generated/default/0.0.0/dd93f051f8e7a942b60ed61eed029300b47696a2 (last modified on Sun Mar  9 10:45:24 2025).\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "dataset = load_dataset(\"DeepPavlov/d2g_generated\", token=env_settings.HUGGINGFACE_TOKEN)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +85,8 @@
     {
      "data": {
       "text/plain": [
-       "[{'messages': [{'participant': 'assistant',\n",
+       "[{'id': 'Responding to DMs on Instagram/Facebook._1_0',\n",
+       "  'messages': [{'participant': 'assistant',\n",
        "    'text': 'Hi there! How can I assist you today?'},\n",
        "   {'participant': 'user', 'text': 'I want to place an order.'},\n",
        "   {'participant': 'assistant',\n",
@@ -118,7 +117,8 @@
        "   {'participant': 'user', 'text': \"No, that's all. Thank you.\"},\n",
        "   {'participant': 'assistant',\n",
        "    'text': 'Alright, feel free to reach out anytime. Have a great day!'}]},\n",
-       " {'messages': [{'participant': 'assistant',\n",
+       " {'id': 'Responding to DMs on Instagram/Facebook._1_1',\n",
+       "  'messages': [{'participant': 'assistant',\n",
        "    'text': 'Hi there! How can I assist you today?'},\n",
        "   {'participant': 'user', 'text': 'I want to place an order.'},\n",
        "   {'participant': 'assistant',\n",
@@ -149,7 +149,8 @@
        "   {'participant': 'user', 'text': \"No, that's all. Thank you.\"},\n",
        "   {'participant': 'assistant',\n",
        "    'text': 'Alright, feel free to reach out anytime. Have a great day!'}]},\n",
-       " {'messages': [{'participant': 'assistant',\n",
+       " {'id': 'Responding to DMs on Instagram/Facebook._1_2',\n",
+       "  'messages': [{'participant': 'assistant',\n",
        "    'text': 'Hi there! How can I assist you today?'},\n",
        "   {'participant': 'user', 'text': 'I want to place an order.'},\n",
        "   {'participant': 'assistant',\n",
@@ -174,17 +175,20 @@
        "   {'participant': 'user', 'text': \"No, that's all. Thank you.\"},\n",
        "   {'participant': 'assistant',\n",
        "    'text': 'Alright, feel free to reach out anytime. Have a great day!'}]},\n",
-       " {'messages': [{'participant': 'assistant',\n",
+       " {'id': 'Responding to DMs on Instagram/Facebook._1_3',\n",
+       "  'messages': [{'participant': 'assistant',\n",
        "    'text': 'Hi there! How can I assist you today?'},\n",
        "   {'participant': 'user', 'text': \"I'd like some product information.\"},\n",
        "   {'participant': 'assistant',\n",
        "    'text': 'Of course! Our products include t-shirts, hoodies, and caps. How can I help you?'}]},\n",
-       " {'messages': [{'participant': 'assistant',\n",
+       " {'id': 'Responding to DMs on Instagram/Facebook._1_4',\n",
+       "  'messages': [{'participant': 'assistant',\n",
        "    'text': 'Hi there! How can I assist you today?'},\n",
        "   {'participant': 'user', 'text': \"I'd like some product information.\"},\n",
        "   {'participant': 'assistant',\n",
        "    'text': 'Sure! We offer t-shirts, hoodies, and caps. What would you like to know?'}]},\n",
-       " {'messages': [{'participant': 'assistant',\n",
+       " {'id': 'Responding to DMs on Instagram/Facebook._1_5',\n",
+       "  'messages': [{'participant': 'assistant',\n",
        "    'text': 'Hi there! How can I assist you today?'},\n",
        "   {'participant': 'user', 'text': 'Never mind, thanks.'},\n",
        "   {'participant': 'assistant',\n",
@@ -202,11 +206,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dialogues = [Dialogue.from_list(c['messages']) for c in data['dialogues']]"
+    "dialogues = [Dialogue.from_list(c['messages'], c['id']) for c in data['dialogues']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Dialogue(messages=[DialogueMessage(text='Hi there! How can I assist you today?', participant='assistant'), DialogueMessage(text='I want to place an order.', participant='user'), DialogueMessage(text='Great! What product are you interested in?', participant='assistant'), DialogueMessage(text='I’d like a t-shirt.', participant='user'), DialogueMessage(text='What size would you like?', participant='assistant'), DialogueMessage(text='Medium, please.', participant='user'), DialogueMessage(text='Would you like that in red or blue?', participant='assistant'), DialogueMessage(text='Red, please.', participant='user'), DialogueMessage(text='Perfect! Can I have your shipping address?', participant='assistant'), DialogueMessage(text='Sure, it’s 123 Main St.', participant='user'), DialogueMessage(text='Thank you! Your order has been placed. Is there anything else I can help you with?', participant='assistant'), DialogueMessage(text='Actually, can I change my order?', participant='user'), DialogueMessage(text='Of course! What would you like to change?', participant='assistant'), DialogueMessage(text='I want a large size.', participant='user'), DialogueMessage(text='What size would you like?', participant='assistant'), DialogueMessage(text='Medium, please.', participant='user'), DialogueMessage(text='Would you like that in red or blue?', participant='assistant'), DialogueMessage(text='Red, please.', participant='user'), DialogueMessage(text='Perfect! Can I have your shipping address?', participant='assistant'), DialogueMessage(text='Sure, it’s 123 Main St.', participant='user'), DialogueMessage(text='Thank you! Your order has been placed. Is there anything else I can help you with?', participant='assistant'), DialogueMessage(text=\"No, that's all. Thank you.\", participant='user'), DialogueMessage(text='Alright, feel free to reach out anytime. Have a great day!', participant='assistant')], id='Responding to DMs on Instagram/Facebook._1_0', topic='', validate=True)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dialogues[0]"
    ]
   },
   {
@@ -238,21 +262,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'value': True, 'description': 'graph has all transitions from Dialogue '},\n",
-       " {'value': True, 'description': 'graph has all transitions from Dialogue '},\n",
-       " {'value': True, 'description': 'graph has all transitions from Dialogue '},\n",
-       " {'value': True, 'description': 'graph has all transitions from Dialogue '},\n",
-       " {'value': True, 'description': 'graph has all transitions from Dialogue '},\n",
-       " {'value': True, 'description': 'graph has all transitions from Dialogue '}]"
+       "[{'value': True,\n",
+       "  'description': 'graph has all paths from Dialogue Responding to DMs on Instagram/Facebook._1_0'},\n",
+       " {'value': True,\n",
+       "  'description': 'graph has all paths from Dialogue Responding to DMs on Instagram/Facebook._1_1'},\n",
+       " {'value': True,\n",
+       "  'description': 'graph has all paths from Dialogue Responding to DMs on Instagram/Facebook._1_2'},\n",
+       " {'value': True,\n",
+       "  'description': 'graph has all paths from Dialogue Responding to DMs on Instagram/Facebook._1_3'},\n",
+       " {'value': True,\n",
+       "  'description': 'graph has all paths from Dialogue Responding to DMs on Instagram/Facebook._1_4'},\n",
+       " {'value': True,\n",
+       "  'description': 'graph has all paths from Dialogue Responding to DMs on Instagram/Facebook._1_5'}]"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +342,7 @@
        "{'source': 1, 'target': 2, 'utterances': ['I want to place an order.']}"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -351,24 +381,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "[{'value': False,\n",
-       "  'description': \"graph has no connection between next pairs [('Hi there! How can I assist you today?', 'I want to place an order.'), ('I want to place an order.', 'Great! What product are you interested in?')] from Dialogue \"},\n",
+       "  'description': \"graph has no connection between next pairs [('Hi there! How can I assist you today?', 'I want to place an order.'), ('I want to place an order.', 'Great! What product are you interested in?')] from Dialogue Responding to DMs on Instagram/Facebook._1_0\"},\n",
        " {'value': False,\n",
-       "  'description': \"graph has no connection between next pairs [('Hi there! How can I assist you today?', 'I want to place an order.'), ('I want to place an order.', 'Great! What product are you interested in?')] from Dialogue \"},\n",
+       "  'description': \"graph has no connection between next pairs [('Hi there! How can I assist you today?', 'I want to place an order.'), ('I want to place an order.', 'Great! What product are you interested in?')] from Dialogue Responding to DMs on Instagram/Facebook._1_1\"},\n",
        " {'value': False,\n",
-       "  'description': \"graph has no connection between next pairs [('Hi there! How can I assist you today?', 'I want to place an order.'), ('I want to place an order.', 'Great! What product are you interested in?')] from Dialogue \"},\n",
-       " {'value': True, 'description': 'graph has all paths from Dialogue '},\n",
-       " {'value': True, 'description': 'graph has all paths from Dialogue '},\n",
-       " {'value': True, 'description': 'graph has all paths from Dialogue '}]"
+       "  'description': \"graph has no connection between next pairs [('Hi there! How can I assist you today?', 'I want to place an order.'), ('I want to place an order.', 'Great! What product are you interested in?')] from Dialogue Responding to DMs on Instagram/Facebook._1_2\"},\n",
+       " {'value': True,\n",
+       "  'description': 'graph has all paths from Dialogue Responding to DMs on Instagram/Facebook._1_3'},\n",
+       " {'value': True,\n",
+       "  'description': 'graph has all paths from Dialogue Responding to DMs on Instagram/Facebook._1_4'},\n",
+       " {'value': True,\n",
+       "  'description': 'graph has all paths from Dialogue Responding to DMs on Instagram/Facebook._1_5'}]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
