Renamed and updated example

--- a/examples/data_generation/cache_example.ipynb
+++ b/examples/data_generation/cache_example.ipynb
@@ -29,7 +29,7 @@
    "source": [
     "# Data generation\n",
     "\n",
-    "In this example we use `LoopedGraphGenerator` to create a pair Graph-Dialogues as a synthetic data"
+    "In this example we use `LoopedGraphGenerator` to create a pair Graph-Dialogues as a synthetic data and use Prompt cache feature"
    ]
   },
   {
