if seed is not set no cache will be used

--- a/examples/data_generation/cache_example.ipynb
+++ b/examples/data_generation/cache_example.ipynb
@@ -70,11 +70,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "gen_model = ChatOpenAI(model='openai/gpt-4o')\n",
+    "gen_model = ChatOpenAI(model='openai/o1-mini')\n",
     "val_model = ChatOpenAI(model='openai/gpt-4o-mini')"
    ]
   },
@@ -87,17 +87,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:dialogue2graph.utils.prompt_caching:Successfully set up SQLAlchemy cache\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "gen = LoopedGraphGenerator(\n",
     "    generation_model=gen_model,\n",
@@ -112,7 +104,8 @@
    "outputs": [],
    "source": [
     "# seed can be any integer, if the seed is the same, the output will be the same\n",
-    "gen.invoke(topic='antivirus software problems', seed=random.randint(0, 1000))"
+    "# If nothing or None is passed no cache will be used\n",
+    "gen.invoke(topic='antivirus software problems')"
    ]
   }
  ],
