update: exp2025_03_12_rec_models_incrementation

--- a/experiments/exp2025_03_12_rec_models_incrementation/exp2025_03_12_rec_models_incrementation/exp_with_chatgpt-4o-latest.ipynb
+++ b/experiments/exp2025_03_12_rec_models_incrementation/exp2025_03_12_rec_models_incrementation/exp_with_chatgpt-4o-latest.ipynb
@@ -371,11 +371,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"gen24_graphid13_incremental_chatgpt-4o-latest_TSG.json\", \"r\", encoding=\"utf-8\") as file:\n",
+    "with open(\"../data/gen24_graphid13_incremental_chatgpt-4o-latest_TSG.json\", \"r\", encoding=\"utf-8\") as file:\n",
     "    _ = json.load(file)\n",
     "example['incremental']['graph_0'] = _['incremental']['graph_0']"
    ]
@@ -849,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -865,7 +865,7 @@
    ],
    "source": [
     "example, true_graph, dialogues = get_start_data(generated_24, 13)\n",
-    "with open(\"gen24_graphid13_incremental_chatgpt-4o-latest_TSG.json\", 'r', encoding=\"utf-8\") as f:\n",
+    "with open(\"../data/gen24_graphid13_incremental_chatgpt-4o-latest_TSG.json\", 'r', encoding=\"utf-8\") as f:\n",
     "    _ = json.load(f)\n",
     "example['incremental']['graph_0'] = _['incremental']['graph_0'] "
    ]
@@ -1884,7 +1884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1900,7 +1900,7 @@
    ],
    "source": [
     "example, true_graph, dialogues = get_start_data(generated_24, 13)\n",
-    "with open(\"gen24_graphid13_incremental_chatgpt-4o-latest_TSG.json\", 'r', encoding=\"utf-8\") as f:\n",
+    "with open(\"../data/gen24_graphid13_incremental_chatgpt-4o-latest_TSG.json\", 'r', encoding=\"utf-8\") as f:\n",
     "    _ = json.load(f)\n",
     "example['incremental']['graph_0'] = _['incremental']['graph_0'] "
    ]
