--- a/experiments/exp2025_03_12_rec_models_incrementation/exp2025_03_12_rec_models_incrementation/exp_with_o3-mini.ipynb
+++ b/experiments/exp2025_03_12_rec_models_incrementation/exp2025_03_12_rec_models_incrementation/exp_with_o3-mini.ipynb
@@ -1011,26 +1011,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Реплики assistant 1 и 4 одинаковые (node 2)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "В диалогах 0 и 1 отличаются реплики assistant 4. Т.0. в диалоге 1 все реплики разные."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"gen24_graphid13_incremental_o3-mini_TSG.json\", 'r', encoding=\"utf-8\") as f:\n",
+    "with open(\"../data/gen24_graphid13_incremental_o3-mini_TSG.json\", 'r', encoding=\"utf-8\") as f:\n",
     "    example = json.load(f)"
    ]
   },
@@ -1193,7 +1179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1209,7 +1195,7 @@
    ],
    "source": [
     "example, true_graph, dialogues = get_start_data(generated_24, 13)\n",
-    "with open(\"gen24_graphid13_incremental_o3-mini_TSG.json\", 'r', encoding=\"utf-8\") as f:\n",
+    "with open(\"../data/gen24_graphid13_incremental_o3-mini_TSG.json\", 'r', encoding=\"utf-8\") as f:\n",
     "    _ = json.load(f)\n",
     "example['incremental']['graph_0'] = _['incremental']['graph_0'] "
    ]
@@ -1990,11 +1976,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"gen24_graphid13_incremental_o3-mini_TSG_emb.json\", 'r', encoding=\"utf-8\") as f:\n",
+    "with open(\"../data/gen24_graphid13_incremental_o3-mini_TSG_emb.json\", 'r', encoding=\"utf-8\") as f:\n",
     "    example = json.load(f)"
    ]
   },
@@ -2150,7 +2136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2166,7 +2152,7 @@
    ],
    "source": [
     "example, true_graph, dialogues = get_start_data(generated_24, 13)\n",
-    "with open(\"gen24_graphid13_incremental_o3-mini_TSG.json\", 'r', encoding=\"utf-8\") as f:\n",
+    "with open(\"../data/gen24_graphid13_incremental_o3-mini_TSG.json\", 'r', encoding=\"utf-8\") as f:\n",
     "    _ = json.load(f)\n",
     "example['incremental']['graph_0'] = _['incremental']['graph_0'] "
    ]
