--- a/experiments/exp2025_03_12_rec_models_incrementation/exp2025_03_12_rec_models_incrementation/exp_with_o1-mini.ipynb
+++ b/experiments/exp2025_03_12_rec_models_incrementation/exp2025_03_12_rec_models_incrementation/exp_with_o1-mini.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
        "'o1-mini'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -77,10 +77,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from chatsky_llm_autoconfig.algorithms.three_stages_1 import ThreeStagesGraphGenerator as Generator\n",
-    "from chatsky_llm_autoconfig.algorithms.three_stages_1i import ThreeStagesGraphGenerator as GeneratorI\n",
-    "from chatsky_llm_autoconfig.algorithms.three_stages_0i import ThreeStagesGraphGenerator as GeneratorI0\n",
-    "from chatsky_llm_autoconfig.algorithms.append_chain import AppendChain\n",
+    "from three_stages_1 import ThreeStagesGraphGenerator as Generator\n",
+    "from three_stages_1i import ThreeStagesGraphGenerator as GeneratorI\n",
+    "from three_stages_0i import ThreeStagesGraphGenerator as GeneratorI0\n",
+    "from append_chain import AppendChain\n",
     "\n",
     "from chatsky_llm_autoconfig.metrics.automatic_metrics import is_same_structure, triplet_match, compare_graphs\n",
     "graph_generator = Generator(\"o1-mini\") # To generate 1st graph from one dialogue\n",
