update: exp2025_03_12_rec_models_incrementation

--- a/experiments/exp2025_03_12_rec_models_incrementation/exp2025_03_12_rec_models_incrementation/exp_with_o3-mini.ipynb
+++ b/experiments/exp2025_03_12_rec_models_incrementation/exp2025_03_12_rec_models_incrementation/exp_with_o3-mini.ipynb
@@ -73,17 +73,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from chatsky_llm_autoconfig.algorithms.three_stages_1 import ThreeStagesGraphGenerator as Generator\n",
-    "from chatsky_llm_autoconfig.algorithms.three_stages_1i import ThreeStagesGraphGenerator as GeneratorI\n",
-    "from chatsky_llm_autoconfig.algorithms.three_stages_0i import ThreeStagesGraphGenerator as GeneratorI0\n",
-    "from chatsky_llm_autoconfig.algorithms.append_chain import AppendChain\n",
+    "from three_stages_1 import ThreeStagesGraphGenerator as Generator\n",
+    "from three_stages_1i import ThreeStagesGraphGenerator as GeneratorI\n",
+    "from three_stages_0i import ThreeStagesGraphGenerator as GeneratorI0\n",
+    "from append_chain import AppendChain\n",
     "\n",
     "from chatsky_llm_autoconfig.metrics.automatic_metrics import is_same_structure, triplet_match, compare_graphs\n",
-    "graph_generator = Generator(\"o3-mini\") # To generate 1st graph from one dialogue\n",
+    "graph_generator = Generator(\"o1-mini\") # To generate 1st graph from one dialogue\n",
     "graph_generator_llm_emb = GeneratorI() # To add dialogue to existing graph: adding nodes with LLM and edges with embedder\n",
     "graph_generator_llm = GeneratorI0() # To add dialogue to existing graph with LLM\n",
     "graph_generator_llm_2 = AppendChain() # To add (append) dialogue to existing graph with LLM (the second approach)"
